release 5.0.0 (#48)
* Feat/v5 (#47)

* feat(arguments) : modernize argument system

* feat(jda): remove duplication code
Use ArgumentParser as interface

* feat: optimization and aliases management and enable runtime command

* feat: continue to use Pattern dot matching precompile

* feat: add little cache system for player in arguments

* feat: add fluent command builder possibility from manager

* feat: force usage with manager for command builder

* feat: add tests

* feat: cleanup code

* feat: add ci/cd for publishing

* feat: remove jitpack

* feat: update readme

* fix: rename master branch in ci

* fix(core): improve updater

* feat: remove useless job

* feat: add annotation addon

* feat: rework tests

* fix(spigot): spigot integration test

* feat: remove useless test

* feat: remove @optional form migration file

* feat: add annoted command exemple in jda module

* feat: add autocompletion for jda (rewrite to wrap event)

* feat: fix test plugin annotations

* fix(version): javadoc missing