@@ -1,64 +1,59 @@
 package fr.traqueur.commands.api.models;
 
-import fr.traqueur.commands.api.arguments.Arguments;
 import fr.traqueur.commands.api.CommandManager;
 import fr.traqueur.commands.api.arguments.Argument;
+import fr.traqueur.commands.api.arguments.ArgumentType;
+import fr.traqueur.commands.api.arguments.Arguments;
 import fr.traqueur.commands.api.arguments.TabCompleter;
-import fr.traqueur.commands.api.exceptions.ArgsWithInfiniteArgumentException;
 import fr.traqueur.commands.api.requirements.Requirement;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 /**
  * This class is the base class for all commands.
  * It contains all the necessary methods to create a command.
  * It is abstract and must be inherited to be used.
+ *
  * @param <T> The plugin that owns the command.
  * @param <S> The type of the sender who use the command.
  */
 public abstract class Command<T, S> {
 
-    private CommandManager<T, S> manager;
-
+    private static final Pattern DOT_PATTERN = Pattern.compile("\\.");
     /**
      * The plugin that owns the command.
      */
     private final T plugin;
-
     /**
      * The name of the command.
      */
     private final String name;
-
     /**
      * The aliases of the command.
      */
     private final List<String> aliases;
-
     /**
      * The subcommands of the command.
      */
     private final List<Command<T, S>> subcommands;
-
     /**
      * The arguments of the command.
      */
     private final List<Argument<S>> args;
-
     /**
      * The optional arguments of the command.
      */
     private final List<Argument<S>> optionalArgs;
-
     /**
      * The requirements of the command.
      */
     private final List<Requirement<S>> requirements;
-
+    private CommandManager<T, S> manager;
     /**
      * The description of the command.
      */
@@ -84,6 +79,8 @@ public abstract class Command<T, S> {
      */
     private boolean infiniteArgs;
 
+    private boolean enable;
+
     /**
      * If the command is subcommand
      */
@@ -91,8 +88,9 @@ public abstract class Command<T, S> {
 
     /**
      * The constructor of the command.
+     *
      * @param plugin The plugin that owns the command.
-     * @param name The name of the command.
+     * @param name   The name of the command.
      */
     public Command(T plugin, String name) {
         this.plugin = plugin;
@@ -107,10 +105,12 @@ public abstract class Command<T, S> {
         this.optionalArgs = new ArrayList<>();
         this.requirements = new ArrayList<>();
         this.subcommand = false;
+        this.enable = true;
     }
 
     /**
      * This method is called to set the manager of the command.
+     *
      * @param manager The manager of the command.
      */
     public void setManager(CommandManager<T, S> manager) {
@@ -119,7 +119,8 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called when the command is executed.
-     * @param sender The sender of the command.
+     *
+     * @param sender    The sender of the command.
      * @param arguments The arguments of the command.
      */
     public abstract void execute(S sender, Arguments arguments);
@@ -133,10 +134,11 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called to unregister the command.
+     *
      * @param subcommands If the subcommands must be unregistered.
      */
     public void unregister(boolean subcommands) {
-        if(this.manager == null) {
+        if (this.manager == null) {
             throw new IllegalArgumentException("The command is not registered.");
         }
         this.manager.unregisterCommand(this, subcommands);
@@ -144,6 +146,7 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called to get the name of the command.
+     *
      * @return The name of the command.
      */
     public final String getName() {
@@ -152,6 +155,7 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called to get the description of the command.
+     *
      * @return The description of the command.
      */
     public final String getDescription() {
@@ -159,7 +163,17 @@ public abstract class Command<T, S> {
     }
 
     /**
+     * This method is called to set the description of the command
+     *
+     * @param description The description of the command.
+     */
+    public final void setDescription(String description) {
+        this.description = description;
+    }
+
+    /**
      * This method is called to get the permission of the command.
+     *
      * @return The permission of the command.
      */
     public final String getPermission() {
@@ -167,7 +181,17 @@ public abstract class Command<T, S> {
     }
 
     /**
+     * This method is called to set the permission of the command.
+     *
+     * @param permission The permission of the command.
+     */
+    public final void setPermission(String permission) {
+        this.permission = permission;
+    }
+
+    /**
      * This method is called to get the usage of the command.
+     *
      * @return The usage of the command.
      */
     public final String getUsage() {
@@ -175,21 +199,35 @@ public abstract class Command<T, S> {
     }
 
     /**
+     * This method is called to set the usage of the command.
+     *
+     * @param usage The usage of the command.
+     */
+    public final void setUsage(String usage) {
+        this.usage = usage;
+    }
+
+    /**
      * This method is called to get the aliases of the command.
+     *
      * @return The aliases of the command.
      */
     public final List<String> getAliases() {
-        List<String> aliases = new ArrayList<>();
-        aliases.add(name);
-        if (!this.aliases.isEmpty()) {
-            aliases.addAll(this.aliases);
-        }
-        return aliases;
+        return Collections.unmodifiableList(aliases);
     }
 
+    public final List<String> getAllLabels() {
+        List<String> labels = new ArrayList<>();
+        labels.add(name);
+        if (!this.aliases.isEmpty()) {
+            labels.addAll(this.aliases);
+        }
+        return labels;
+    }
 
     /**
      * This method is called to get the subcommands of the command.
+     *
      * @return The subcommands of the command.
      */
     public final List<Command<T, S>> getSubcommands() {
@@ -198,6 +236,7 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called to get the arguments of the command.
+     *
      * @return The arguments of the command.
      */
     public final List<Argument<S>> getArgs() {
@@ -206,14 +245,16 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called to get the optional arguments of the command.
+     *
      * @return The optional arguments of the command.
      */
-    public final List<Argument<S>> getOptinalArgs() {
+    public final List<Argument<S>> getOptionalArgs() {
         return optionalArgs;
     }
 
     /**
      * This method is called to check if the command is only to use in game.
+     *
      * @return If the command is only to use in game.
      */
     public final boolean inGameOnly() {
@@ -222,6 +263,7 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called to get the requirements of the command.
+     *
      * @return The requirements of the command.
      */
     public final List<Requirement<S>> getRequirements() {
@@ -230,6 +272,7 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called to check if the command has infinite arguments.
+     *
      * @return If the command has infinite arguments.
      */
     public final boolean isInfiniteArgs() {
@@ -237,15 +280,8 @@ public abstract class Command<T, S> {
     }
 
     /**
-     * This method is called to set the description of the command
-     * @param description The description of the command.
-     */
-    public final void setDescription(String description) {
-        this.description = description;
-    }
-
-    /**
      * This method is called to set if the command is only to use in game.
+     *
      * @param gameOnly If the command is only to use in game.
      */
     public final void setGameOnly(boolean gameOnly) {
@@ -253,23 +289,8 @@ public abstract class Command<T, S> {
     }
 
     /**
-     * This method is called to set the permission of the command.
-     * @param permission The permission of the command.
-     */
-    public final void setPermission(String permission) {
-        this.permission = permission;
-    }
-
-    /**
-     * This method is called to set the usage of the command.
-     * @param usage The usage of the command.
-     */
-    public final void setUsage(String usage) {
-        this.usage = usage;
-    }
-
-    /**
      * This method is called to add aliases to the command.
+     *
      * @param aliases The aliases to add.
      */
     public final void addAlias(String... aliases) {
@@ -278,6 +299,7 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called to add a alias to the command.
+     *
      * @param alias The alias to add.
      */
     public final void addAlias(String alias) {
@@ -286,6 +308,7 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called to add subcommands to the command.
+     *
      * @param commands The subcommands to add.
      */
     @SafeVarargs
@@ -297,189 +320,117 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called to add arguments to the command.
+     *
      * @param args The arguments to add.
      */
     public final void addArgs(Object... args) {
-        if (Arrays.stream(args).allMatch(arg -> arg instanceof String)) {
-            for (Object arg : args) {
-                String argStr = (String) arg;
-                this.addArgs(argStr);
-            }
-            return;
-        }
 
-        if (args.length % 2 != 0 && !(args[1] instanceof String)) {
-            throw new IllegalArgumentException("You must provide a type for the argument.");
+        if (args.length % 2 != 0) {
+            throw new IllegalArgumentException("You must use the method like succession of String,Class<?>");
         }
 
         for (int i = 0; i < args.length; i += 2) {
-            if(!(args[i] instanceof String && args[i + 1] instanceof Class<?>)) {
+            if (!(args[i] instanceof String argName && args[i + 1] instanceof Class<?> type)) {
                 throw new IllegalArgumentException("You must provide a type for the argument.");
             }
-            this.addArgs((String) args[i], (Class<?>) args[i + 1]);
+            this.addArg(argName, type);
         }
     }
 
     /**
      * This method is called to add arguments to the command.
-     * @param arg The argument to add.
-     */
-    public final void addArgs(String arg) {
-        if(!arg.contains(CommandManager.TYPE_PARSER)) {
-            this.addArgs(arg, String.class, null);
-        } else {
-            this.addArgs(arg, null, null);
-        }
-    }
-
-    /**
-     * This method is called to add arguments to the command.
-     * @param arg The argument to add.
+     *
+     * @param arg  The argument to add.
      * @param type The type of the argument to add.
      */
-    public final void addArgs(String arg, Class<?> type) {
-        this.addArgs(arg, type,null);
+    public final void addArg(String arg, Class<?> type) {
+        this.addArg(arg, type, null);
     }
 
     /**
      * This method is called to add arguments to the command.
-     * @param arg The argument to add.
+     *
+     * @param arg       The argument to add.
      * @param converter The converter of the argument.
+     * @param type      The type of the argument, can be null if the argument is a string.
      */
-    public final void addArgs(String arg, TabCompleter<S> converter) {
-        if(!arg.contains(CommandManager.TYPE_PARSER)) {
-            this.addArgs(arg, String.class, converter);
-        } else {
-            this.addArgs(arg, null, converter);
-        }
+    public final void addArg(String arg, Class<?> type, TabCompleter<S> converter) {
+        this.add(arg, ArgumentType.of(type), converter, false);
     }
 
     /**
      * This method is called to add arguments to the command.
-     * @param arg The argument to add.
-     * @param converter The converter of the argument.
-     * @param type The type of the argument, can be null if the argument is a string.
-     */
-    public final void addArgs(String arg, Class<?> type, TabCompleter<S> converter) {
-        if (arg.contains(CommandManager.TYPE_PARSER) && type != null) {
-            throw new IllegalArgumentException("You can't use the type parser in the command arguments.");
-        }
-        if(type == null && !arg.contains(CommandManager.TYPE_PARSER)) {
-            throw new IllegalArgumentException("You must provide a type for the argument.");
-        }
-
-        if(type != null) {
-            arg = arg + CommandManager.TYPE_PARSER + type.getSimpleName().toLowerCase();
-        }
-
-        this.add(arg, converter, false);
-    }
-
-    /**
-     * This method is called to add arguments to the command.
+     *
      * @param args The arguments to add.
      */
     public final void addOptionalArgs(Object... args) {
-        if (Arrays.stream(args).allMatch(arg -> arg instanceof String)) {
-            for (Object arg : args) {
-                String argStr = (String) arg;
-                this.addOptionalArgs(argStr);
-            }
-            return;
-        }
-
-        if (args.length % 2 != 0 && !(args[1] instanceof String)) {
+        if (args.length % 2 != 0) {
             throw new IllegalArgumentException("You must provide a type for the argument.");
         }
 
         for (int i = 0; i < args.length; i += 2) {
-            if(!(args[i] instanceof String && args[i + 1] instanceof Class<?>)) {
+            if (!(args[i] instanceof String argName && args[i + 1] instanceof Class<?> clazz)) {
                 throw new IllegalArgumentException("You must provide a type for the argument.");
             }
-            this.addOptionalArgs((String) args[i], (Class<?>) args[i + 1]);
+            this.addOptionalArg(argName, clazz);
         }
     }
 
     /**
      * This method is called to add optional arguments to the command.
-     * @param arg The argument to add.
-     */
-    public final void addOptionalArgs(String arg) {
-        if (!arg.contains(CommandManager.TYPE_PARSER)) {
-            this.addOptionalArgs(arg, String.class, null);
-            return;
-        }
-        this.addOptionalArgs(arg, null, null);
-    }
-
-    /**
-     * This method is called to add optional arguments to the command.
-     * @param arg The argument to add.
+     *
+     * @param arg  The argument to add.
      * @param type The type of the argument to add.
      */
-    public final void addOptionalArgs(String arg, Class<?> type) {
-        this.addOptionalArgs(arg, type,null);
+    public final void addOptionalArg(String arg, Class<?> type) {
+        this.addOptionalArg(arg, type, null);
     }
 
     /**
      * This method is called to add optional arguments to the command.
-     * @param arg The argument to add.
+     *
+     * @param arg       The argument to add.
      * @param converter The converter of the argument.
      */
-    public final void addOptionalArgs(String arg, TabCompleter<S> converter) {
-        if (!arg.contains(CommandManager.TYPE_PARSER)) {
-            this.addOptionalArgs(arg, String.class, converter);
-            return;
-        }
-        this.addOptionalArgs(arg, null, converter);
+    public final void addOptionalArg(String arg, Class<?> type, TabCompleter<S> converter) {
+        this.add(arg, ArgumentType.of(type), converter, true);
     }
 
-    /**
-     * This method is called to add arguments to the command.
-     * @param arg The argument to add.
-     * @param type The type of the argument to add.
-     * @param converter The converter of the argument.
-     */
-    public final void addOptionalArgs(String arg, Class<?> type, TabCompleter<S> converter) {
-        if (arg.contains(CommandManager.TYPE_PARSER) && type != null) {
-            throw new IllegalArgumentException("You can't use the type parser in the command arguments.");
-        }
-        if(type != null) {
-            arg = arg + CommandManager.TYPE_PARSER + type.getSimpleName().toLowerCase();
+    private void add(String name, ArgumentType type, TabCompleter<S> completer, boolean optional) {
+        if (this.infiniteArgs) {
+            if (this.manager != null) {
+                String msg = (optional ? "Optional arguments" : "Arguments") +
+                        " cannot follow infinite arguments.";
+                this.manager.getLogger().error(msg);
+            }
         }
 
-        this.add(arg, converter, true);
-    }
+        if (type.isInfinite()) {
+            this.infiniteArgs = true;
+        }
 
-    private void add(String arg, TabCompleter<S> converter, boolean opt) {
-        try {
-            if (this.infiniteArgs) {
-                throw new ArgsWithInfiniteArgumentException(false);
-            }
+        Argument<S> arg = new Argument<>(name, type, completer);
 
-            if (arg.contains(":infinite")) {
-                this.infiniteArgs = true;
-            }
-            if(opt) {
-                this.optionalArgs.add(new Argument<>(arg, converter));
-            } else {
-                this.args.add(new Argument<>(arg, converter));
-            }
-        } catch (ArgsWithInfiniteArgumentException e) {
-            this.manager.getLogger().error(e.getMessage());
+        if (optional) {
+            this.optionalArgs.add(arg);
+        } else {
+            this.args.add(arg);
         }
     }
 
     /**
      * This method is called to add requirements to the command.
+     *
      * @param requirement The requirements to add.
      */
+    @SafeVarargs
     public final void addRequirements(Requirement<S>... requirement) {
         requirements.addAll(Arrays.asList(requirement));
     }
 
     /**
      * Check if the command is subcommand
+     *
      * @return if the command is subcommand
      */
     public final boolean isSubCommand() {
@@ -488,6 +439,7 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called to get the plugin that owns the command.
+     *
      * @return The plugin that owns the command.
      */
     public final T getPlugin() {
@@ -496,23 +448,23 @@ public abstract class Command<T, S> {
 
     /**
      * This method is called to generate a default usage for the command.
-     * @param platform The platform of the command.
+     *
      * @param sender The sender of the command.
-     * @param label The label of the command.
+     * @param label  The label of the command.
      * @return The default usage of the command.
      */
-    public String generateDefaultUsage(CommandPlatform<T,S> platform, S sender, String label) {
+    public String generateDefaultUsage(S sender, String label) {
         StringBuilder usage = new StringBuilder("/");
 
-        String[] parts = label.split("\\.");
+        String[] parts = DOT_PATTERN.split(label);
         usage.append(String.join(" ", parts));
 
         List<Command<T, S>> directSubs = this.getSubcommands().stream()
                 .filter(sub -> {
                     String perm = sub.getPermission();
-                    return perm.isEmpty() || platform.hasPermission(sender, perm);
+                    return perm.isEmpty() || this.manager.getPlatform().hasPermission(sender, perm);
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         if (!directSubs.isEmpty()) {
             usage.append(" <");
@@ -523,28 +475,46 @@ public abstract class Command<T, S> {
             usage.append(subs).append(">");
         }
 
-        if (!this.getArgs().isEmpty() || !this.getOptinalArgs().isEmpty()) {
+        if (!this.getArgs().isEmpty() || !this.getOptionalArgs().isEmpty()) {
             usage.append(!directSubs.isEmpty() ? "|" : " ");
 
             // arguments obligatoires : <name:type>
             String req = this.getArgs().stream()
-                    .map(arg -> "<" + arg.arg() + ">")
+                    .map(arg -> "<" + arg.canonicalName() + ">")
                     .collect(Collectors.joining(" "));
             usage.append(req);
 
             // arguments optionnels : [name:type]
-            if (!this.getOptinalArgs().isEmpty()) {
+            if (!this.getOptionalArgs().isEmpty()) {
                 if (!req.isEmpty()) {
                     usage.append(" ");
                 }
-                String opt = this.getOptinalArgs().stream()
-                        .map(arg -> "[" + arg.arg() + "]")
+                String opt = this.getOptionalArgs().stream()
+                        .map(arg -> "[" + arg.canonicalName() + "]")
                         .collect(Collectors.joining(" "));
                 usage.append(opt);
             }
         }
 
         return usage.toString();
+    }
+
+    /**
+     * Check if the command is enabled
+     *
+     * @return if the command is enabled
+     */
+    public boolean isEnabled() {
+        return enable;
+    }
+
+    /**
+     * Change the state of the command
+     *
+     * @param state the new state for the command
+     */
+    public void setEnabled(boolean state) {
+        this.enable = state;
     }
 
     /**
